# ArbitrumContracts

./: .gitignore  .gitmodules  Build.sh  QuickREADME.md  README.md  Readme.md  Readme_old.nc  StylusTutorial.sh  build.sh  deploy_auction_example.sh  deploy_decryption_contracts.sh  deploy_decryption_contracts_verbose.sh  deploy_test_encryption_contracts.sh  env.example  stylus.sh  temp.md
bet-contract-precompile/src/: lib.rs
cache/: solidity-files-cache.json
chacha20-contract/: Cargo.toml  private.txt
chacha20-contract-decrypter/: Cargo.toml  setup.sh  test.sh
chacha20-contract-decrypter/examples/: decrypter.rs
chacha20-contract-decrypter/src/: lib.rs
chacha20-contract-mac/: Cargo.toml  setup.sh  test.sh
chacha20-contract-mac/examples/: mac.rs
chacha20-contract-mac/src/: lib.rs
chacha20-contract/examples/: counter.rs
chacha20-contract/src/: lib.rs
custom-contract/: Cargo.toml  private.txt
custom-contract-precompile/: Cargo.toml  temp.txt
custom-contract-precompile/src/: lib.rs
custom-contract/src/: lib.rs
custom_contract/: Cargo.toml
custom_contract/examples/: counter.rs
custom_contract/src/: lib.rs
decrypter-contract/: Cargo.toml  setup.sh  test.sh
decrypter-contract/examples/: counter.rs  decrypter.rs
decrypter-contract/src/: lib.rs
hash-auction-contract/: Cargo.toml
hash-auction-contract/src/: lib.rs
ibe-contract/: Cargo.toml  setup.sh  test.sh
ibe-contract-hashing/: Cargo.toml  setup.sh  test.sh
ibe-contract-hashing/examples/: hashing.rs
ibe-contract-hashing/src/: lib.rs
ibe-contract-pairing/: Cargo.toml  rust-toolchain.toml  setup.sh  test.sh
ibe-contract-pairing/examples/: pairing.rs
ibe-contract-pairing/src/: lib.rs  main.rs
ibe-contract-precompile-call/: Cargo.toml
ibe-contract-precompile-call/src/: lib.rs
ibe-contract/examples/: ibe.rs
ibe-contract/src/: lib.rs
registry-contract/: Cargo.toml  priv_key_1.txt
registry-contract/examples/: counter.rs
registry-contract/src/: lib.rs  main.rs
test-contract-rust/: Cargo.toml  test.sh
test-contract-rust/examples/: test.rs
test-contract-rust/src/: lib.rs
test-contract-solidity/: AuctionExample.sol  Encrypted.sol  test.sh
test-script/: bridge-fairyring.sh  s.py  setup-local-orbit.sh  setup-local.sh  setup-registry.sh  setup.sh  test_length.sh  test_size.sh
test-script/custom-test/: Cargo.toml
test-script/custom-test/examples/: counter.rs  datalength.rs  datasize.rs  local-orbit.rs  local.rs  testnet.rs
test-script/custom-test/src/: lib.rs
test-simple-auction-solidity/: ConfidentialAuctionExample.sol  README.md  SealedBidAuctionExample.sol  convert_to_array.py  test.sh  test_generatepksk.sh  test_newpksk.sh
