[package]
name = "chacha20"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]


[dependencies]
stylus-sdk = "0.6.0"
bls12_381_plus = { version = "0.7.0", default-features = false, features = ["groups", "alloc", "experimental"]}
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
base64 = "0.13"
hkdf = {version = "0.11", default-features = false}
hmac = {version = "0.11", default-features = false}
sha2 = {version = "0.9", default-features = false}
chacha20poly1305 = {version = "0.9.1", default-features = false, features = ["alloc"]}
wee_alloc = "0.4.5"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
ethers = { version = "2.0.14", features = ["openssl"] }
eyre = "0.6.8"
ethabi={version = "18.0.0", default-features = false}


[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "chacha20"
path = "src/lib.rs"



[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = 'fat'             # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds