[package]
name = "chacha20mac"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]

stylus-sdk = "0.5.2"

serde = { version = "1.0", features = ["derive"] }

base64 = "0.21.4"

hkdf = {version = "0.11", default-features = false}

hmac = {version = "0.11", default-features = false}
sha2 = {version = "0.9", default-features = false}
hex = "0.4.3"

wee_alloc = "0.4.5"
# arbitrum-dec = { path = "../arbitrum-dec" }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = { version = "2.0.14", features = ["openssl"] }
eyre = "0.6.8"
ethabi={version = "18.0.0", default-features = false}
wee_alloc = {version = "0.4.5"}

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "chacha20mac"
path = "src/lib.rs"



[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = 'fat'             # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds