[package]
name = "custom"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]

stylus-sdk = "0.4.1"

wee_alloc = "0.4.5"
getrandom={version = "0.2.12",default-features = false, features = ["js"]}

ethabi={version = "18.0.0", default-features = false}

alloy-sol-types = "0.3.1"

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "custom"
path = "src/lib.rs"



[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = 'fat'             # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds