[package]
name = "decrypter"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
stylus-sdk = { version = "0.6.0", features = ["docs"] }
bls12_381_plus = { version = "0.8.17", default-features = false, features = ["groups"]}
#ic_bls12_381 = {version = "0.8.0", default-features = false, features = ["groups"]}
serde = { version = "1.0", features = ["derive"] }


base64 = {version = "0.22.1"}


ethabi={version = "18.0.0", default-features = false}

sha2 = {version = "0.10.8", default-features = false}



wee_alloc = {version = "0.4.5", default-features = false}
# arbitrum-dec = { path = "../arbitrum-dec" }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
ethers = { version = "2.0.14", features = ["openssl"] }
eyre = "0.6.8"
ethabi={version = "18.0.0", default-features = false}


[features]
export-abi = ["stylus-sdk/export-abi"]



[[bin]]
name = "decrypter"
path = "src/lib.rs"



[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = true           # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds


[toolchain]
channel = "1.80.1"  # Specify the exact Rust version
components = ["rustfmt", "clippy"]
targets = ["wasm32-unknown-unknown"]

[lib]
crate-type = ["cdylib"]



[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-reference-types"]