[package]
name = "stylus-bls"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]

stylus-sdk = "0.4.1"


num-bigint = {version = "0.4", default-features = false}

ic_bls12_381 = {version = "0.8.0", default-features = false, features = ["groups", "alloc", "experimental"]}
#bls12_381 = { version = "0.7", default-features = false, features = ["groups", "pairings", "alloc", "experimental"] }

sha2 = "0.9"

wee_alloc = "0.4.5"
# arbitrum-dec = { path = "../arbitrum-dec" }


[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "stylus-bls"
path = "src/lib.rs"



[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = true             # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds