[package]
name = "ibe-contract-hashing"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]


[dependencies]

stylus-sdk = "0.6.0"
wasm-bindgen = "0.2"
num-bigint = {version = "0.4", default-features = false}
ark-bls12-381 = "0.4.0"
ic_bls12_381 = {version = "0.8.0", default-features = false, features = ["groups", "alloc", "experimental"]}
ark-serialize="0.4.2"
sha2 = "0.9"
hex = "0.4.3"
wee_alloc = "0.4.5"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = { version = "2.0.14", features = ["openssl"] }
eyre = "0.6.8"
ethabi={version = "18.0.0", default-features = false}

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "ibe-contract-hashing"
path = "src/lib.rs"



[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = true             # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds
