[package]
name = "stylus-bls"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
mini-alloc = "0.4.2"
stylus-sdk = { version = "0.6.0", features = ["docs"] }
hex = "0.4.3"
rand_core="0.6.4"
ark-ff="0.4.2"
ark-std="0.4.0"
ark-test-curves="0.4.2"
ark-ec="0.4.2"
ark-bls12-381="0.4.0"
ic_bls12_381 = {version = "0.10.0", default-features = false, features = ["groups", "pairings", "alloc", "experimental"]}
bls12_381 = "0.8.0"
ark-serialize="0.4.2"
pairing="0.23.0"
sha2 = {version = "0.10.8", default-features = false}
wee_alloc = "0.4.5"
# arbitrum-dec = { path = "../arbitrum-dec" }
[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = { version = "2.0.14", features = ["openssl"] }
eyre = "0.6.8"
ethabi={version = "18.0.0", default-features = false}
[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "stylus-bls"
path = "src/lib.rs"

[lib]
crate-type = [ "cdylib"]

[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = true             # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds

[toolchain]
channel = "1.80.1"  # Specify the exact Rust version
components = ["rustfmt", "clippy"]
targets = ["wasm32-unknown-unknown"]





[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-reference-types"]