[package]
name = "ibe"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]

stylus-sdk = { version = "0.5.0", features = ["docs"] }

mini-alloc = "0.4.2"
serde = { version = "1.0",  default-features = false, features = ["derive"] }

# num-bigint = {version = "0.4", default-features = false}
# ic_bls12_381 = {version = "0.8.0", default-features = false, features = ["groups", "experimental"]}
serde_json ={version = "1.0.108", default-features = false, features = ["alloc"]}
bls12_381_plus = {version = "0.7.0",  features = ["groups"]}


sha2 = {version = "0.10.8", default-features = false}
ethabi={version = "18.0.0", default-features = false}
hex = "0.4.3" 

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = { version = "2.0.14", features = ["openssl"] }
eyre = "0.6.8"
ethabi={version = "18.0.0", default-features = false}
wee_alloc = {version = "0.4.5"}
# arbitrum-dec = { path = "../arbitrum-dec" }
[[bin]]
name = "ibe"
path = "src/lib.rs"



[features]
export-abi = ["stylus-sdk/export-abi"]



[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = true          # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds

