[package]
name = "r"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = "0.4.3"

wee_alloc = "0.4.5"
stylus-proc="0.4.3"


[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "r"
path = "src/main.rs"


